feat: revert "remove `id_token` flow with freeform provider" (#933)
Reverts supabase/gotrue#927 due to identifying that some users do
actually use this API but only for Apple and Google. I'll come back with
another PR that blocks non-Apple and Google issuers only.
